--- a/AppNetDotNet/AppNetDotNet.csproj
+++ b/AppNetDotNet/AppNetDotNet.csproj
@@ -72,7 +72,7 @@
     </Compile>
     <Compile Include="Model\Annotation.cs" />
     <Compile Include="Model\Application.cs" />
-    <Compile Include="Model\AppNetAccount.cs" />
+    <Compile Include="Model\Authorization.cs" />
     <Compile Include="Model\Filter.cs" />
     <Compile Include="Model\Image.cs" />
     <Compile Include="Model\Entities.cs" />
@@ -91,6 +91,7 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="alpha.png" />
     <Content Include="Newtonsoft.Json.dll" />
     <Content Include="Newtonsoft.Json.pdb" />
     <Resource Include="Newtonsoft.Json.xml" />
