--- a/AppNetDotNet/AppNetDotNet.csproj
+++ b/AppNetDotNet/AppNetDotNet.csproj
@@ -74,7 +74,15 @@
       <DependentUpon>Authorize new App.net account.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\ACL.cs" />
-    <Compile Include="Model\Annotation.cs" />
+    <Compile Include="Model\Annotations\Annotations.cs" />
+    <Compile Include="Model\Annotations\BlogUrl.cs" />
+    <Compile Include="Model\Annotations\Crosspost.cs" />
+    <Compile Include="Model\Annotations\EmbeddedMedia.cs" />
+    <Compile Include="Model\Annotations\FacebookId.cs" />
+    <Compile Include="Model\Annotations\GeoLocation.cs" />
+    <Compile Include="Model\Annotations\Homepage.cs" />
+    <Compile Include="Model\Annotations\Language.cs" />
+    <Compile Include="Model\Annotations\TwitterUsername.cs" />
     <Compile Include="Model\Application.cs" />
     <Compile Include="Model\Authorization.cs" />
     <Compile Include="Model\Channel.cs" />
