--- a/NymphAppNetTester/App.config
+++ b/NymphAppNetTester/App.config
@@ -1,6 +1,24 @@
 <?xml version="1.0"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="NymphAppNetTester.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
     </startup>
+    <userSettings>
+        <NymphAppNetTester.Properties.Settings>
+            <setting name="AccessToken" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ClientId" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ClientSecret" serializeAs="String">
+                <value />
+            </setting>
+        </NymphAppNetTester.Properties.Settings>
+    </userSettings>
 </configuration>
