File attaching to posts added, mime type detection now better with images and can be overridden by optional parameter, new Newtonsoft version

--- a/AppNetDotNet/AppNetDotNet.csproj
+++ b/AppNetDotNet/AppNetDotNet.csproj
@@ -76,6 +76,7 @@
       <DependentUpon>Authorize new App.net account.xaml</DependentUpon>
     </Compile>
     <Compile Include="Model\ACL.cs" />
+    <Compile Include="Model\Annotations\AnnotationReplacement_File.cs" />
     <Compile Include="Model\Annotations\Annotations.cs" />
     <Compile Include="Model\Annotations\BlogUrl.cs" />
     <Compile Include="Model\Annotations\Crosspost.cs" />
