--- a/AppNetDotNet/AppNetDotNet.csproj
+++ b/AppNetDotNet/AppNetDotNet.csproj
@@ -78,15 +78,21 @@
     <Compile Include="Model\ACL.cs" />
     <Compile Include="Model\Annotations\AnnotationReplacement_File.cs" />
     <Compile Include="Model\Annotations\Annotations.cs" />
-    <Compile Include="Model\Annotations\BlogUrl.cs" />
+    <Compile Include="Model\Annotations\Blog.cs" />
+    <Compile Include="Model\Annotations\ChannelInvite.cs" />
     <Compile Include="Model\Annotations\Crosspost.cs" />
     <Compile Include="Model\Annotations\EmbeddedMedia.cs" />
     <Compile Include="Model\Annotations\FacebookId.cs" />
+    <Compile Include="Model\Annotations\FallbackURL.cs" />
     <Compile Include="Model\Annotations\GeoLocation.cs" />
     <Compile Include="Model\Annotations\Homepage.cs" />
     <Compile Include="Model\Annotations\Language.cs" />
     <Compile Include="Model\Annotations\Patter.cs" />
+    <Compile Include="Model\Annotations\Poll.cs" />
+    <Compile Include="Model\Annotations\Presence.cs" />
     <Compile Include="Model\Annotations\TwitterUsername.cs" />
+    <Compile Include="Model\Annotations\YawpClientInfo.cs" />
+    <Compile Include="Model\Annotations\YawpTopic.cs" />
     <Compile Include="Model\Application.cs" />
     <Compile Include="Model\Authorization.cs" />
     <Compile Include="Model\Channel.cs" />
