Added Model.Authorization.registerAppInRegistry() which will create the needed registry entries for the non-quirks-mode-auth window Auhtorization now starts a logout in default before starting the auth flow in order to authorize multiple accounts in a row Added Model.interaction Added ApiCall.Interactions Interactions model automatically parses the objects field for users and/or posts and writes them to custom follower or posts attributes Fix: Private messages posting sent the DateTime with value 0:0:0 - not send anymore at all

--- a/AppNetDotNet/AppNetDotNet.csproj
+++ b/AppNetDotNet/AppNetDotNet.csproj
@@ -65,6 +65,7 @@
     <Compile Include="ApiCalls\Files.cs" />
     <Compile Include="ApiCalls\Filters.cs" />
     <Compile Include="ApiCalls\ApiCallResponse.cs" />
+    <Compile Include="ApiCalls\Interactions.cs" />
     <Compile Include="ApiCalls\Messages.cs" />
     <Compile Include="ApiCalls\Parameters.cs" />
     <Compile Include="ApiCalls\Places.cs" />
@@ -100,6 +101,7 @@
     <Compile Include="Model\Filter.cs" />
     <Compile Include="Model\Image.cs" />
     <Compile Include="Model\Entities.cs" />
+    <Compile Include="Model\Interaction.cs" />
     <Compile Include="Model\Message.cs" />
     <Compile Include="Model\Meta.cs" />
     <Compile Include="Model\Place.cs" />
