Added much better error response handling (will parse now returned JSON if availbale) Added blocking endpoints for users Added text processor Added Muting: get list of muted users by another user than me Fix: Addding entities on posting a post did not work

--- a/AppNetDotNet/AppNetDotNet.csproj
+++ b/AppNetDotNet/AppNetDotNet.csproj
@@ -71,6 +71,7 @@
     <Compile Include="ApiCalls\Places.cs" />
     <Compile Include="ApiCalls\Streams.cs" />
     <Compile Include="ApiCalls\Subscriptions.cs" />
+    <Compile Include="ApiCalls\TextProcessor.cs" />
     <Compile Include="ApiCalls\Tokens.cs" />
     <Compile Include="ApiCalls\Users.cs" />
     <Compile Include="Helper\Authorize new App.net account.xaml.cs">
