--- a/NymphAppNetTester/NymphAppNetTester.csproj
+++ b/NymphAppNetTester/NymphAppNetTester.csproj
@@ -93,6 +93,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ListEntries.xaml.cs">
+      <DependentUpon>ListEntries.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Streaming.xaml.cs">
       <DependentUpon>Streaming.xaml</DependentUpon>
     </Compile>
@@ -101,6 +104,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="FileApiTests.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="ListEntries.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
